[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Background.png" type="Texture" id=3]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.199921, -3.24344, 0, 0, 0, 0, 1023.19, -3.24344 )
}

[node name="Node" type="Node"]
script = ExtResource( 1 )
Rock = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Menu" parent="." instance=ExtResource( 4 )]

[node name="InitPosition" type="Position2D" parent="."]
position = Vector2( 120, 430 )

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="RockTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InitialTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -0.199921, -3.24344 )
[connection signal="initgame" from="Menu" to="." method="_on_Menu_initgame"]
[connection signal="collision" from="Player" to="." method="_on_Player_collision"]
[connection signal="timeout" from="RockTimer" to="." method="_on_RockTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InitialTimer" to="." method="_on_InitialTimer_timeout"]
